<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fl_canvas_container"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:id="@+id/iv_background"
            />
        <com.hbsoft.simpledrawingapp.DrawingView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dv_myCanvas"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:gravity="center"
        android:background="@drawable/color_container_background"
        android:orientation="horizontal"
        android:id="@+id/ll_color"
        >
        <Button
            android:background="@drawable/white_round"
            android:contentDescription="@string/select_white"
            style="@style/colorPicker"
            android:tag="@color/white"
            />
        <Button
            android:background="@drawable/marron_round"
            android:contentDescription="@string/select_marron"
            style="@style/colorPicker"
            android:tag="@color/maroon"
            />
        <Button
            android:background="@drawable/yellow_round"
            android:contentDescription="@string/select_yellow"
            style="@style/colorPicker"
            android:tag="@color/yellow"
            />
        <Button
            android:background="@drawable/fuchsia_round"
            android:contentDescription="@string/select_fuchsia"
            style="@style/colorPicker"
            android:tag="@color/fuchsia"
            />
        <Button
            android:background="@drawable/red_round"
            android:contentDescription="@string/select_red"
            style="@style/colorPicker"
            android:tag="@color/red"
            />
        <Button
            android:background="@drawable/aqua_round"
            android:contentDescription="@string/select_aqua"
            style="@style/colorPicker"

            android:tag="@color/aqua"
            />
        <Button
            android:background="@drawable/lime_round"
            android:contentDescription="@string/select_lime"
            style="@style/colorPicker"
            android:tag="@color/lime"
            />
        <Button
            android:background="@drawable/black_round"
            android:contentDescription="select black"
            style="@style/colorPicker"
            android:tag="@color/black"
            />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:orientation="horizontal">
        <ImageButton
            style="@style/action_button_style"
            android:id="@+id/ib_gallery"
            android:onClick="pickImage"
            android:src="@drawable/outline_collections_black_48"
            android:contentDescription="gallery"
            />
        <ImageButton
            android:id="@+id/ib_brush"
            android:src="@drawable/twotone_brush_black_48"
            android:contentDescription="brush"
            style="@style/action_button_style" />
        <ImageButton
            style="@style/action_button_style"
            android:id="@+id/ib_undo"
            android:backgroundTint="@color/white"
            android:src="@drawable/round_undo_black_48"
            android:contentDescription="@string/undo_button"
            />
        <ImageButton
            style="@style/action_button_style"
            android:id="@+id/ib_redo"
            android:src="@drawable/round_redo_black_48"
            android:contentDescription="@string/redo_button"
            />
        <ImageButton
            style="@style/action_button_style"
            android:id="@+id/ib_save"
            android:src="@drawable/round_send_and_archive_black_48"
            android:contentDescription="@string/save_and_share_button"
            />
    </LinearLayout>


</LinearLayout>